--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -24692,6 +24692,18 @@ form label.error {
   margin-bottom: 30px;
 }
 
+
+    .popover-project-actions {
+        position: absolute;
+        background: #fff;
+        border: 1px solid #ddd;
+        box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+        z-index: 1000;
+        padding: 10px;
+        width: 200px;
+    }
+
+    
 .inner-pages .dz-default.dz-message>span {
   color: #1abc9c;
   font-size: 20px;
