--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -32160,3 +32160,14 @@ a {
   color: #1c6c09;
   background-color: #d9fbd0;
 }
+
+.address-overlay {
+  position: fixed; /* Ensures the overlay covers the viewport */
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Dark background with opacity */
+  z-index: 999; /* Ensure it sits above other elements */
+  display: none; /* Hidden by default */
+}
