--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -32189,6 +32189,10 @@ a {
   cursor: pointer;
 }
 
+#submit-filters{
+  height: 40px !important;
+}
+
 .select2-clear-button:hover {
   color: red;
 }
