--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -29900,6 +29900,24 @@ font {
   overflow: hidden;
   position: absolute;
 }
+.css-1nm0gly {
+  border-top-right-radius: 6px;
+  border-bottom-right-radius: 6px;
+  position: absolute;
+  font-weight: 600;
+  font-size: 10px;
+  color: #fff;
+  background: #003499;
+  z-index: 2;
+  top: 10px;
+  left: 0px;
+  -webkit-padding-start:0.75rem;
+  padding-inline-start: 0.75rem;
+  -webkit-padding-end: 0.75rem;
+  padding-inline-end: 0.75rem;
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
 
 .type-tag {
   background-color: black !important;
