--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -29909,14 +29909,14 @@ font {
   color: #fff;
   background: #003499;
   z-index: 2;
-  top: 10px;
+  bottom: 6px;
   left: 0px;
-  -webkit-padding-start:0.75rem;
+  -webkit-padding-start: 0.75rem;
   padding-inline-start: 0.75rem;
   -webkit-padding-end: 0.75rem;
   padding-inline-end: 0.75rem;
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
+  /* padding-top: 0.25rem; */
+  /* padding-bottom: 0.25rem; */
 }
 
 .type-tag {
