--- a/public/css/app.css
+++ b/public/css/app.css
@@ -29,7 +29,7 @@
 
 .js-cookie-consent .js-cookie-consent-agree {
     background: #fff;
-    color: #EA2B2E;
+    color: #D32729;
     border: none;
     padding: 8px 20px;
     cursor: pointer;
