--- a/public/css/project.css
+++ b/public/css/project.css
@@ -72,7 +72,7 @@
 .pagination .page-item .page-link:hover i,
 .pagination .page-item:hover a,
 .pagination .page-item .page-link:hover a{
-    color:#EA2B2E !important
+    color:#D32729 !important
 }
 /* Sağ ve sol okların üzerine gelindiğinde simge rengini beyaza dönüştür */
 .pagination .page-item-left:hover i,
@@ -120,7 +120,7 @@
 }
 
 .modal-btn-gonder {
-    background-color: #ea2b2e;
+    background-color: #D32729;
     color: #fff;
 }
 
