--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -662,7 +662,7 @@ img {
 }
 
 .listingDetailsSliderNav .item.active {
-  border: 1px solid #ea2b2e !important;
+  border: 1px solid #D32729 !important;
 }
 
 .brand-head .navbar-items {
@@ -3371,7 +3371,7 @@ section.portfolio {
 .portfolio .homes-content .homes-list li i {
   font-size: 11px;
   margin-right: 5px;
-  color: #ea2b2e !important;
+  color: #D32729 !important;
 }
 
 .portfolio .homes-content .homes-list span {
@@ -17468,7 +17468,7 @@ a.button {
 }
 
 .error-check label:before {
-  border: 1px solid #ea2b2e !important;
+  border: 1px solid #D32729 !important;
 }
 
 .inner-pages .checkboxes label:before {
@@ -17918,8 +17918,8 @@ section.headings-2 {
 }
 
 .inner-pages .headings-2 .listing-title-bar h3:after {
-  color: #ea2b2e;
-  background-color: #ea2b2e;
+  color: #D32729;
+  background-color: #D32729;
   color: black;
   display: block;
   height: 3px;
@@ -17955,9 +17955,9 @@ section.headings-2 {
 
 .inner-pages .headings-2 span.category-tag {
   font-size: 11px;
-  background: #ea2b2e;
+  background: #D32729;
   color: #fff;
-  border: 1px solid #ea2b2e;
+  border: 1px solid #D32729;
   padding: 5px 15px;
   border-radius: 50px;
   top: -3px;
@@ -23765,7 +23765,7 @@ a.btn_1 {
 .btn-light-gray:before,
 .btn-transparent:before,
 .btn-transparent2:before {
-  background-color: #ea2b2e;
+  background-color: #D32729;
   content: "";
   height: 100%;
   left: -100%;
@@ -24729,7 +24729,7 @@ form label.error {
   border: 1px solid #ccc;
   cursor: pointer;
   padding: 0;
-  color: #ea2b2e;
+  color: #D32729;
   width: 20px;
   height: 20px;
   color: #fff;
@@ -25773,7 +25773,7 @@ textarea.border,
 }
 
 .form-block label .error {
-  color: #ea2b2e;
+  color: #D32729;
   font-size: 11px;
   margin-left: 10px;
 }
@@ -27879,7 +27879,7 @@ h4 {
 }
 
 .sude .sudespecialbuttonsd::hover {
-  background-color: #ea2b2e !important;
+  background-color: #D32729 !important;
 }
 
 .sude .special-div {
@@ -28407,7 +28407,7 @@ font {
     height: 100%;
     font-size: 10px !important;
     width: 35px;
-    background: #ea2b2e !important;
+    background: #D32729 !important;
     color: white !important;
     text-align: center;
     position: absolute;
@@ -28486,7 +28486,7 @@ font {
 }
 
 .red-bg {
-  background: #ea2b2e !important;
+  background: #D32729 !important;
   color: White !important;
 }
 
@@ -28551,12 +28551,12 @@ font {
 
 .toggle-project-favorite:hover i:before,
 .toggle-favorite:hover i:before {
-  color: #ea2b2e !important;
+  color: #D32729 !important;
 }
 
 .toggle-project-favorite:focus i:before,
 .toggle-favorite:focus i:before {
-  color: #ea2b2e !important;
+  color: #D32729 !important;
 }
 
 .payment-plan-pop-up {
@@ -28664,7 +28664,7 @@ font {
 
 #orders-container .header-bar .order-search-box-container .osb-give-up span:hover {
   cursor: pointer;
-  color: #ea2b2e;
+  color: #D32729;
   text-decoration: underline;
 }
 
@@ -28680,7 +28680,7 @@ font {
   position: absolute;
   right: 9px;
   top: 9px;
-  color: #ea2b2e;
+  color: #D32729;
   font-size: 11px;
   cursor: pointer;
 }
@@ -28732,7 +28732,7 @@ font {
 }
 
 .text-red {
-  color: #ea2b2e !important;
+  color: #D32729 !important;
   font-weight: 600 !important;
 }
 
@@ -28781,7 +28781,7 @@ font {
 }
 
 #orders-container .order .order-header .order-header-info b.orange {
-  color: #ea2b2e;
+  color: #D32729;
 }
 
 #orders-container .order .order-header button {
@@ -28840,7 +28840,7 @@ font {
 }
 
 #orders-container .order .order-item .order-item-status .title .shipment-info:hover {
-  color: #ea2b2e;
+  color: #D32729;
 }
 
 #orders-container .order .order-item .order-item-status .title.preparing_defective~.description,
@@ -29259,7 +29259,7 @@ font {
   height: 44px;
   margin: 20px;
   border-radius: 6px;
-  background-color: #ea2b2e;
+  background-color: #D32729;
   font-size: 11px;
   font-weight: 600;
 }
@@ -29273,7 +29273,7 @@ font {
   border-radius: 50%;
   background-color: #fff4ec;
   font-size: 40px;
-  color: #ea2b2e;
+  color: #D32729;
   margin-bottom: 10px;
 }
 
@@ -29403,7 +29403,7 @@ font {
   justify-content: center;
   height: 24px;
   background-color: #fef4ec;
-  color: #ea2b2e;
+  color: #D32729;
   border-top-left-radius: 2px;
   border-bottom-left-radius: 2px;
   padding: 0 6px;
@@ -29479,7 +29479,7 @@ font {
   border-radius: 50%;
   background-color: #fff4ec;
   font-size: 32px;
-  color: #ea2b2e;
+  color: #D32729;
   margin-bottom: 10px;
   box-sizing: border-box;
 }
@@ -29487,7 +29487,7 @@ font {
 #orders-container .no-order-container .no-title {
   font-size: 20px;
   font-weight: 600;
-  color: #ea2b2e;
+  color: #D32729;
 }
 
 #orders-container .no-order-container .no-desc {
@@ -29538,8 +29538,8 @@ font {
 
 #orders-container .status-quick-filters-wrapper .status-quick-filter-tabs-wrapper .filter-tab:hover,
 #orders-container .status-quick-filters-wrapper .status-quick-filter-tabs-wrapper .filter-tab.active {
-  border-color: #ea2b2e;
-  color: #ea2b2e;
+  border-color: #D32729;
+  color: #D32729;
   box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.05);
 }
 
@@ -29846,7 +29846,7 @@ font {
 }
 
 #orders-container .cobranded-card-offer-information .offer-information-text-wrapper .information-bullets li>i>span.path1::before {
-  color: #ea2b2e;
+  color: #D32729;
 }
 
 #orders-container .cobranded-card-offer-information .offer-information-text-wrapper .information-bullets li>p {
@@ -29869,7 +29869,7 @@ font {
   width: 200px;
   height: 28px;
   box-sizing: border-box;
-  background: #ea2b2e;
+  background: #D32729;
   border-radius: 4px;
   padding: 8px;
   transition: 0.3s ease-in;
@@ -30332,8 +30332,8 @@ a {
   cursor: pointer;
   display: flex;
   align-items: center;
-  border: 1px solid #ea2b2e;
-  background-color: #ea2b2e;
+  border: 1px solid #D32729;
+  background-color: #D32729;
 }
 
 .buyUserRequest,
@@ -30360,7 +30360,7 @@ a {
 .login-button {
   box-sizing: border-box;
   color: #fff;
-  background-color: #ea2b2e;
+  background-color: #D32729;
   width: 100%;
   height: 35px;
   text-align: center;
@@ -30429,7 +30429,7 @@ a {
 }
 
 .buyUserRequest:hover {
-  background: #ea2b2e;
+  background: #D32729;
 }
 
 .buyUserRequest:hover .buyUserRequest__text {
@@ -30442,11 +30442,11 @@ a {
 }
 
 .buyUserRequest:active .buyUserRequest__icon {
-  background-color: #ea2b2e;
+  background-color: #D32729;
 }
 
 .buyUserRequest:active {
-  border: 1px solid #ea2b2e;
+  border: 1px solid #D32729;
 }
 
 .cartIconBtn {
@@ -30982,7 +30982,7 @@ a {
   align-items: center;
   height: 60px;
   color: #fff;
-  background-color: #ea2b2e;
+  background-color: #D32729;
   font-size: 22px;
 }
 
@@ -31014,8 +31014,8 @@ a {
 }
 
 .sharer-button button {
-  background: #ea2b2e !important;
-  border: #ea2b2e !important;
+  background: #D32729 !important;
+  border: #D32729 !important;
   width: 150px;
   color: White;
   height: auto !important;
@@ -31555,7 +31555,7 @@ a {
     }
 
     .sale-text{
-        color: #EA2B2E !important;
+        color: #D32729 !important;
         margin: 0;
     }
 
@@ -31741,11 +31741,11 @@ a {
     }
 
     .save-button-custom-edit{
-        background-color: #EA2B2E;
+        background-color: #D32729;
         padding: 10px 20px;
         border-radius: 3px !important;
         color: #fff;
-        border: 1px solid #EA2B2E;
+        border: 1px solid #D32729;
     }
 
     .custom-edit-area input{
@@ -31853,7 +31853,7 @@ a {
     }
 
     .pop-up-top-gradient{
-        background: #EA2B2E;
+        background: #D32729;
         padding: 15px 25px 15px 25px;
         display: flex;
         justify-content: space-between;
@@ -31865,7 +31865,7 @@ a {
         padding: 3px;
         font-size: 14px;
         height: 100%;
-        color: #EA2B2E;
+        color: #D32729;
         display: block;
         border-radius: 7px;
     }
@@ -31931,7 +31931,7 @@ a {
     }
     
     .not-payment-bg{
-        background: #EA2B2E1A;
+        background: #D327291A;
     }
 
     .payment-bg{
@@ -31941,9 +31941,9 @@ a {
     .payment-modal-section table tbody td svg{
         width: 20px;
         height : 20px;
-        color: #EA2B2E;
-        fill: #EA2B2E;
-        stroke: #EA2B2E;
+        color: #D32729;
+        fill: #D32729;
+        stroke: #D32729;
     }
 
     .payment-modal-area{
@@ -31974,8 +31974,8 @@ a {
 
     .payment-modal-section .all_selected_button{
         background: #fff ;
-        border: 1px solid #EA2B2E ;
-        color: #EA2B2E ;
+        border: 1px solid #D32729 ;
+        color: #D32729 ;
         display: flex;
         align-items: center;
     }
@@ -32003,8 +32003,8 @@ a {
     }
 
     .add-pay-dec{
-        background: #EA2B2E;
-        border: 1px solid #EA2B2E;
+        background: #D32729;
+        border: 1px solid #D32729;
         border-radius: 20px !important;
         padding: 5px 20px;
         color: #fff;
@@ -32135,11 +32135,11 @@ a {
     }
 
     .confirm-modal-confirm-button{
-        background: #EA2B2E;
+        background: #D32729;
         border-radius: 40px !important;
         padding: 3px 20px;
         color: #fff;
-        border: 1px solid #EA2B2E;
+        border: 1px solid #D32729;
     }
 
     .confirm-modal-cancel-button{
@@ -32160,8 +32160,8 @@ a {
     }
 
     .file-upload-area{
-        border: 1px dashed #EA2B2E;
-        background: #ea2b2e33;
+        border: 1px dashed #D32729;
+        background: #D3272933;
         padding: 40px 70px;
         display: flex;
         flex-direction: column;
@@ -32173,7 +32173,7 @@ a {
     }
 
     .file-upload-area span{
-        color: #EA2B2E;
+        color: #D32729;
         text-align: center;
     }
 .d-block {
