--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -28378,11 +28378,20 @@ font {
   background: rgb(0 0 0 / 17%)
 }
 
-.map-marker {
+.mapmarker {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 8px; /* Space between icon and text */
+  border: 0;
+  top: 16px;
+  font-size: 10px;
+  position: absolute;
+  background: white;
+  color: black;
+  padding: 5px;
+  right: -4px;
+  border-radius: 10px 0 0 10px;
+
 }
 
 .map-marker img {
