--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -135,14 +135,16 @@ h5 {
   padding: 0.5rem 2rem;
 }
 
-.nav-tabs .nav-item.show .nav-link,
-.nav-tabs .nav-link.active {
-  box-shadow: 0 0 0 1px rgba(71, 85, 95, 0.08) !important;
-  border-color: transparent;
+.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
+  /* box-shadow: 0 0 0 1px rgba(71, 85, 95, 0.08) !important; */
+  border-bottom: 4px solid #D32729 !important;
   background-color: #274abb;
-  color: White;
+  color: #D32729;
 }
 
+.nav-tabs .nav-link.active h3{
+  color: #D32729 !important;
+}
 .nav-tabs li {
   margin-right: 2px;
 }
@@ -27842,6 +27844,7 @@ h4 {
 
 .loginItems .login-content {
   background: #fff;
+  border: 1px solid #ebebeb;
   width: 100%;
   padding: 0 5rem;
 }
