--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -135,14 +135,20 @@ h5 {
   padding: 0.5rem 2rem;
 }
 
-
-
 .nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
-  /* box-shadow: 0 0 0 1px rgba(71, 85, 95, 0.08) !important; */
+  border-bottom: none;
+  background-color: #274abb;
+  color:white;
+}
+
+.login-tabs .nav-item.show .nav-link, .login-tabs .nav-link.active {
   border-bottom: 4px solid #D32729 !important;
   background-color: #274abb;
-  color: #D32729;
+  color: #D32729 !important;
 }
+
+
+
 
 .nav-tabs .nav-link.active h3{
   color: #D32729 !important;
