--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -24005,7 +24005,7 @@ a.btn_1 {
   padding: 9px !important;
   /* border: none !important; */
   color: #717171 !important;
-  border-color: black;
+  border-color: #bebebe;
   padding: 0 1rem;
   border-radius: 0 !important;
   height: 35px;
