--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -27829,6 +27829,48 @@ background-color:#D32729 !important;
   margin: 0 !important;
 }
 
+.ps-ratings {
+  margin-top: 13px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-family: source_sans_prosemibold,serif;
+  -webkit-font-smoothing: antialiased;
+}
+.ps-ratings__stars {
+  display: flex;
+  align-items: center;
+}
+.ps-ratings__stars .star-w {
+  scale: 1.25;
+  margin-right: 6px;
+}
+.ps-ratings__stars .ratings {
+  margin-top: 3px;
+}
+.ps-ratings__average {
+  height: 20px;
+  color: #999;
+  line-height: 10px;
+  font-size: 10px;
+  font-weight: 600;
+}
+.ps-ratings__count-text {
+  color: #333;
+  line-height: 20px;
+  margin-left: 5px;
+  font-size: 24px;
+  margin-right: 4px;
+  font-weight: 600;
+}
+.ps-ratings__counts {
+  display: flex;
+  align-items: center;
+  font-size: 14px;
+  line-height: 17px;
+  font-weight: 600;
+  color: #333;
+}
 .login-tabs li a h3 {
   margin-top: 10px;
   font-size: 11px;
