--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -27834,7 +27834,6 @@ background-color:#D32729 !important;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  font-family: source_sans_prosemibold,serif;
   -webkit-font-smoothing: antialiased;
 }
 .ps-ratings__stars {
@@ -27863,10 +27862,14 @@ background-color:#D32729 !important;
   margin-right: 4px;
   font-weight: 600;
 }
+.ps-ratings__divider{
+  margin-right: 5px;
+  margin-left: 5px;
+}
 .ps-ratings__counts {
   display: flex;
   align-items: center;
-  font-size: 14px;
+  font-size: 11px;
   line-height: 17px;
   font-weight: 600;
   color: #333;
