--- a/public/css/app.css
+++ b/public/css/app.css
@@ -101,6 +101,50 @@
     max-width: 600px;
     width: 100%;
 }
+.checkbox-option {
+    position: relative;
+    display: flex;
+    align-items: center;
+}
+
+.form-checkbox {
+    appearance: none;
+    width: 20px;
+    height: 20px;
+    background-color: #ccc;
+    border-radius: 4px;
+    position: relative;
+    cursor: pointer;
+    outline: none;
+    transition: background-color 0.3s;
+}
+
+.form-checkbox:checked {
+    background-color: #4caf50;
+}
+
+.form-checkbox:checked::before {
+    content: "";
+    position: absolute;
+    top: 4px;
+    left: 4px;
+    width: 12px;
+    height: 12px;
+    background-color: white;
+    border-radius: 2px;
+}
+
+.checkbox-label {
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    background: transparent;
+}
+
+.text-green-600 {
+    color: #4caf50;
+}
+
 
 /* Modal Başlık */
 #cookie-management-modal h2 {
