--- a/public/css/app.css
+++ b/public/css/app.css
@@ -92,6 +92,9 @@
 }
 
 
+#close-modal{
+border: none !important;
+}
 /* Modal İçeriği */
 #cookie-management-modal .bg-white {
     background: #ffffff;
