--- a/public/css/app.css
+++ b/public/css/app.css
@@ -14,6 +14,7 @@
     opacity: 0;
 }
 
+
 .js-cookie-consent.show {
     transform: translateY(0);
     opacity: 1;
@@ -157,6 +158,9 @@ border: none !important;
 }
 
 @media (max-width:768px) {
+    .js-cookie-consent-agree button {
+        width:100% !important;
+    }
     .js-cookie-consent {
         position: fixed;
         bottom: 70px;
