--- a/public/css/app.css
+++ b/public/css/app.css
@@ -163,6 +163,9 @@
 }
 
 @media (max-width:768px) {
+    .mobileFlexEnd{
+        display: block !important;
+    }
     .js-cookie-consent button {
         width: 100% !important;
         margin-top: 10px;
