--- a/public/css/housing.css
+++ b/public/css/housing.css
@@ -61,7 +61,7 @@
 .pagination .page-item .page-link:hover i,
 .pagination .page-item:hover a,
 .pagination .page-item .page-link:hover a{
-    color:#D32729 !important
+    color:#EC2F2E !important
 }
 /* Font Awesome simgelerinin rengini belirle */
 .pagination .page-item-left i,
