--- a/public/css/app.css
+++ b/public/css/app.css
@@ -29,7 +29,7 @@
 
 .js-cookie-consent button {
     background: #fff;
-    color: #D32729;
+    color: #EC2F2E;
     border: none;
     padding:10px !important;
     cursor: pointer;
