--- a/public/css/colors/green.css
+++ b/public/css/colors/green.css
@@ -296,7 +296,7 @@ a.button.border, a.button {
 	color: #18ba60;
 }
 .inner-pages .port-info .btn {
-	background: #D32729;
+	background: #EC2F2E;
 	border: 1px solid #18ba60;
 }
 #login .btn_1, a.btn_1 {
