--- a/public/css/map.css
+++ b/public/css/map.css
@@ -28,7 +28,7 @@
 .crossmark::after {
     content: '✗';
     /* Unicode character for the 'X' symbol */
-    color: #D32729;
+    color: #EC2F2E;
     /* Color of the crossmark */
     font-size: 16px;
     /* Adjust the font size as needed */
@@ -145,7 +145,7 @@ section.d-map {
 
 .map-animation-right .btn.btn-outline-light {
     background: #fff;
-    color: #D32729;
+    color: #EC2F2E;
 }
 
 .map-marker-block .map-bg {
