--- a/public/css/maps.css
+++ b/public/css/maps.css
@@ -64,8 +64,8 @@
 
 .leaflet-div-icon,
 .map-marker {
-    background-color: #D32729;
-    border: 5px solid #D32729;
+    background-color: #EC2F2E;
+    border: 5px solid #EC2F2E;
     border-radius: 50%;
     cursor: pointer;
     position: relative;
@@ -77,7 +77,7 @@
 .map-marker:before {
     border: 4px solid transparent;
     border-width: 10px 8px;
-    border-top-color: #D32729;
+    border-top-color: #EC2F2E;
     bottom: -24px;
     height: 0;
     content: '';
@@ -208,7 +208,7 @@
 
 .listing-window-image:before {
     -webkit-font-smoothing: antialiased;
-    background-color: #D32729;
+    background-color: #EC2F2E;
     border-radius: 50%;
     color: #fff;
     content: '\f002';
@@ -617,13 +617,13 @@
     width: 36px!important;
     height: 36px!important;
     line-height: 36px!important;
-    background-color: #D32729;
+    background-color: #EC2F2E;
 }
 
 .cluster-visible:before {
-    border: 7px solid #D32729;
+    border: 7px solid #EC2F2E;
     opacity: .2;
-    box-shadow: inset 0 0 0 4px #D32729;
+    box-shadow: inset 0 0 0 4px #EC2F2E;
     content: '';
     position: absolute;
     border-radius: 50%;
@@ -689,7 +689,7 @@
     height: 0;
     border-style: solid;
     border-width: 8px 4px 0;
-    border-color: #D32729 transparent transparent;
+    border-color: #EC2F2E transparent transparent;
     top: 49px;
     left: 50%;
     transform: translateX(-50%);
@@ -718,7 +718,7 @@
 
 .face.front {
     background-color: #fff;
-    border: 6px solid #D32729;
+    border: 6px solid #EC2F2E;
     color: #121B22;
     z-index: 100
 }
@@ -726,8 +726,8 @@
 .face.back {
     transform: rotateY(180deg);
     box-sizing: border-box;
-    background: #D32729;
-    border-color: #D32729;
+    background: #EC2F2E;
+    border-color: #EC2F2E;
     color: #fff
 }
 
@@ -2246,7 +2246,7 @@ screen and (max-height:300px) {
 }
 
 .search-2 .form-group .nice-select:hover {
-    color: #D32729;
+    color: #EC2F2E;
 }
 
 .search-2 .form-group .nice-select::after {
@@ -2255,7 +2255,7 @@ screen and (max-height:300px) {
 }
 
 .search-2 .form-group .nice-select i {
-    color: #D32729;
+    color: #EC2F2E;
     font-size: 1.2rem;
     margin-top: 5px;
     margin-right: 10px;
@@ -2272,7 +2272,7 @@ screen and (max-height:300px) {
 
 .search-2 .form-group .list li:hover {
     color: #fff;
-    background: #D32729;
+    background: #EC2F2E;
 }
 
 .search-2 .form-group.looking {
@@ -2330,7 +2330,7 @@ screen and (max-height:300px) {
 .search-2 .form-group .btn {
     display: block;
     width: 100%;
-    background: #D32729;
+    background: #EC2F2E;
     cursor: pointer;
     color: #fff;
     text-transform: uppercase;
@@ -2719,7 +2719,7 @@ section.feature-categories {
 }
 
 .homepage-9 h4.sc-jb-title a:hover {
-    color: #D32729;
+    color: #EC2F2E;
 }
 
 .homepage-9 .sc-2-detail span {
