--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -146,16 +146,16 @@ h5 {
 
 .login-tabs .nav-item.show .nav-link,
 .login-tabs .nav-link.active {
-  border-bottom: 4px solid #D32729 !important;
+  border-bottom: 4px solid #EC2F2E !important;
   background-color: #274abb;
-  color: #D32729 !important;
+  color: #EC2F2E !important;
 }
 
 
 
 
 .nav-tabs .nav-link.active h3 {
-  color: #D32729 !important;
+  color: #EC2F2E !important;
 }
 
 .nav-tabs li {
@@ -683,7 +683,7 @@ img {
 }
 
 .listingDetailsSliderNav .item.active {
-  border: 1px solid #D32729 !important;
+  border: 1px solid #EC2F2E !important;
 }
 
 .brand-head .navbar-items {
@@ -3392,7 +3392,7 @@ section.portfolio {
 .portfolio .homes-content .homes-list li i {
   font-size: 11px;
   margin-right: 5px;
-  color: #D32729 !important;
+  color: #EC2F2E !important;
 }
 
 .portfolio .homes-content .homes-list span {
@@ -17489,7 +17489,7 @@ a.button {
 }
 
 .error-check label:before {
-  border: 1px solid #D32729 !important;
+  border: 1px solid #EC2F2E !important;
 }
 
 .inner-pages .checkboxes label:before {
@@ -17939,8 +17939,8 @@ section.headings-2 {
 }
 
 .inner-pages .headings-2 .listing-title-bar h3:after {
-  color: #D32729;
-  background-color: #D32729;
+  color: #EC2F2E;
+  background-color: #EC2F2E;
   color: black;
   display: block;
   height: 3px;
@@ -17976,9 +17976,9 @@ section.headings-2 {
 
 .inner-pages .headings-2 span.category-tag {
   font-size: 11px;
-  background: #D32729;
+  background: #EC2F2E;
   color: #fff;
-  border: 1px solid #D32729;
+  border: 1px solid #EC2F2E;
   padding: 5px 15px;
   border-radius: 50px;
   top: -3px;
@@ -23787,7 +23787,7 @@ a.btn_1 {
 .btn-light-gray:before,
 .btn-transparent:before,
 .btn-transparent2:before {
-  background-color: #D32729;
+  background-color: #EC2F2E;
   content: "";
   height: 100%;
   left: -100%;
@@ -24752,7 +24752,7 @@ form label.error {
   border: 1px solid #ccc;
   cursor: pointer;
   padding: 0;
-  color: #D32729;
+  color: #EC2F2E;
   width: 20px;
   height: 20px;
   color: #fff;
@@ -25796,7 +25796,7 @@ textarea.border,
 }
 
 .form-block label .error {
-  color: #D32729;
+  color: #EC2F2E;
   font-size: 11px;
   margin-left: 10px;
 }
@@ -27727,8 +27727,8 @@ h4 {
   height: 48px;
   border-radius: 4px;
   text-transform: uppercase;
-  border-color: #D32729 !important;
-  background-color: #D32729 !important;
+  border-color: #EC2F2E !important;
+  background-color: #EC2F2E !important;
   transition: all 0.3s ease;
   font-size: 11px;
 }
@@ -27818,8 +27818,8 @@ h4 {
 .user-type-button.active {
   background-color: transparent;
   color: white;
-  border-color: #D32729;
-  background-color: #D32729;
+  border-color: #EC2F2E;
+  background-color: #EC2F2E;
 
 }
 
@@ -27959,7 +27959,7 @@ h4 {
 }
 
 .sude .sudespecialbuttonsd::hover {
-  background-color: #D32729 !important;
+  background-color: #EC2F2E !important;
 }
 
 .sude .special-div {
@@ -28495,7 +28495,7 @@ font {
 }
 
 .reservationBtn {
-  background-color: #D32729 !important;
+  background-color: #EC2F2E !important;
 }
 
 .CartBtn,
@@ -28552,7 +28552,7 @@ font {
     height: 100%;
     font-size: 10px !important;
     width: 35px;
-    background: #D32729 !important;
+    background: #EC2F2E !important;
     color: white !important;
     text-align: center;
     position: absolute;
@@ -28631,7 +28631,7 @@ font {
 }
 
 .red-bg {
-  background: #D32729 !important;
+  background: #EC2F2E !important;
   color: White !important;
 }
 
@@ -28696,12 +28696,12 @@ font {
 
 .toggle-project-favorite:hover i:before,
 .toggle-favorite:hover i:before {
-  color: #D32729 !important;
+  color: #EC2F2E !important;
 }
 
 .toggle-project-favorite:focus i:before,
 .toggle-favorite:focus i:before {
-  color: #D32729 !important;
+  color: #EC2F2E !important;
 }
 
 .payment-plan-pop-up {
@@ -28809,7 +28809,7 @@ font {
 
 #orders-container .header-bar .order-search-box-container .osb-give-up span:hover {
   cursor: pointer;
-  color: #D32729;
+  color: #EC2F2E;
   text-decoration: underline;
 }
 
@@ -28825,7 +28825,7 @@ font {
   position: absolute;
   right: 9px;
   top: 9px;
-  color: #D32729;
+  color: #EC2F2E;
   font-size: 11px;
   cursor: pointer;
 }
@@ -28877,7 +28877,7 @@ font {
 }
 
 .text-red {
-  color: #D32729 !important;
+  color: #EC2F2E !important;
   font-weight: 600 !important;
 }
 
@@ -28926,7 +28926,7 @@ font {
 }
 
 #orders-container .order .order-header .order-header-info b.orange {
-  color: #D32729;
+  color: #EC2F2E;
 }
 
 #orders-container .order .order-header button {
@@ -28985,7 +28985,7 @@ font {
 }
 
 #orders-container .order .order-item .order-item-status .title .shipment-info:hover {
-  color: #D32729;
+  color: #EC2F2E;
 }
 
 #orders-container .order .order-item .order-item-status .title.preparing_defective~.description,
@@ -29404,7 +29404,7 @@ font {
   height: 44px;
   margin: 20px;
   border-radius: 6px;
-  background-color: #D32729;
+  background-color: #EC2F2E;
   font-size: 11px;
   font-weight: 600;
 }
@@ -29418,7 +29418,7 @@ font {
   border-radius: 50%;
   background-color: #fff4ec;
   font-size: 40px;
-  color: #D32729;
+  color: #EC2F2E;
   margin-bottom: 10px;
 }
 
@@ -29548,7 +29548,7 @@ font {
   justify-content: center;
   height: 24px;
   background-color: #fef4ec;
-  color: #D32729;
+  color: #EC2F2E;
   border-top-left-radius: 2px;
   border-bottom-left-radius: 2px;
   padding: 0 6px;
@@ -29624,7 +29624,7 @@ font {
   border-radius: 50%;
   background-color: #fff4ec;
   font-size: 32px;
-  color: #D32729;
+  color: #EC2F2E;
   margin-bottom: 10px;
   box-sizing: border-box;
 }
@@ -29632,7 +29632,7 @@ font {
 #orders-container .no-order-container .no-title {
   font-size: 20px;
   font-weight: 600;
-  color: #D32729;
+  color: #EC2F2E;
 }
 
 #orders-container .no-order-container .no-desc {
@@ -29683,8 +29683,8 @@ font {
 
 #orders-container .status-quick-filters-wrapper .status-quick-filter-tabs-wrapper .filter-tab:hover,
 #orders-container .status-quick-filters-wrapper .status-quick-filter-tabs-wrapper .filter-tab.active {
-  border-color: #D32729;
-  color: #D32729;
+  border-color: #EC2F2E;
+  color: #EC2F2E;
   box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.05);
 }
 
@@ -29991,7 +29991,7 @@ font {
 }
 
 #orders-container .cobranded-card-offer-information .offer-information-text-wrapper .information-bullets li>i>span.path1::before {
-  color: #D32729;
+  color: #EC2F2E;
 }
 
 #orders-container .cobranded-card-offer-information .offer-information-text-wrapper .information-bullets li>p {
@@ -30014,7 +30014,7 @@ font {
   width: 200px;
   height: 28px;
   box-sizing: border-box;
-  background: #D32729;
+  background: #EC2F2E;
   border-radius: 4px;
   padding: 8px;
   transition: 0.3s ease-in;
@@ -30478,8 +30478,8 @@ a {
   cursor: pointer;
   display: flex;
   align-items: center;
-  border: 1px solid #D32729;
-  background-color: #D32729;
+  border: 1px solid #EC2F2E;
+  background-color: #EC2F2E;
 }
 
 .buyUserRequest,
@@ -30506,7 +30506,7 @@ a {
 .login-button {
   box-sizing: border-box;
   color: #fff;
-  background-color: #D32729;
+  background-color: #EC2F2E;
   width: 100%;
   height: 35px;
   text-align: center;
@@ -30575,7 +30575,7 @@ a {
 }
 
 .buyUserRequest:hover {
-  background: #D32729;
+  background: #EC2F2E;
 }
 
 .buyUserRequest:hover .buyUserRequest__text {
@@ -30588,11 +30588,11 @@ a {
 }
 
 .buyUserRequest:active .buyUserRequest__icon {
-  background-color: #D32729;
+  background-color: #EC2F2E;
 }
 
 .buyUserRequest:active {
-  border: 1px solid #D32729;
+  border: 1px solid #EC2F2E;
 }
 
 .cartIconBtn {
@@ -31128,7 +31128,7 @@ a {
   align-items: center;
   height: 60px;
   color: #fff;
-  background-color: #D32729;
+  background-color: #EC2F2E;
   font-size: 22px;
 }
 
@@ -31160,8 +31160,8 @@ a {
 }
 
 .sharer-button button {
-  background: #D32729 !important;
-  border: #D32729 !important;
+  background: #EC2F2E !important;
+  border: #EC2F2E !important;
   width: 150px;
   color: White;
   height: auto !important;
@@ -31699,7 +31699,7 @@ li::after {
 }
 
 .sale-text {
-  color: #D32729 !important;
+  color: #EC2F2E !important;
   margin: 0;
 }
 
@@ -31885,11 +31885,11 @@ li::after {
 }
 
 .save-button-custom-edit {
-  background-color: #D32729;
+  background-color: #EC2F2E;
   padding: 10px 20px;
   border-radius: 3px !important;
   color: #fff;
-  border: 1px solid #D32729;
+  border: 1px solid #EC2F2E;
 }
 
 .custom-edit-area input {
@@ -31998,7 +31998,7 @@ li::after {
 }
 
 .pop-up-top-gradient {
-  background: #D32729;
+  background: #EC2F2E;
   padding: 15px 25px 15px 25px;
   display: flex;
   justify-content: space-between;
@@ -32010,7 +32010,7 @@ li::after {
   padding: 3px;
   font-size: 14px;
   height: 100%;
-  color: #D32729;
+  color: #EC2F2E;
   display: block;
   border-radius: 7px;
 }
@@ -32076,7 +32076,7 @@ li::after {
 }
 
 .not-payment-bg {
-  background: #D327291A;
+  background: #EC2F2E1A;
 }
 
 .payment-bg {
@@ -32086,9 +32086,9 @@ li::after {
 .payment-modal-section table tbody td svg {
   width: 20px;
   height: 20px;
-  color: #D32729;
-  fill: #D32729;
-  stroke: #D32729;
+  color: #EC2F2E;
+  fill: #EC2F2E;
+  stroke: #EC2F2E;
 }
 
 .payment-modal-area {
@@ -32119,8 +32119,8 @@ li::after {
 
 .payment-modal-section .all_selected_button {
   background: #fff;
-  border: 1px solid #D32729;
-  color: #D32729;
+  border: 1px solid #EC2F2E;
+  color: #EC2F2E;
   display: flex;
   align-items: center;
 }
@@ -32148,8 +32148,8 @@ li::after {
 }
 
 .add-pay-dec {
-  background: #D32729;
-  border: 1px solid #D32729;
+  background: #EC2F2E;
+  border: 1px solid #EC2F2E;
   border-radius: 20px !important;
   padding: 5px 20px;
   color: #fff;
@@ -32280,11 +32280,11 @@ li::after {
 }
 
 .confirm-modal-confirm-button {
-  background: #D32729;
+  background: #EC2F2E;
   border-radius: 40px !important;
   padding: 3px 20px;
   color: #fff;
-  border: 1px solid #D32729;
+  border: 1px solid #EC2F2E;
 }
 
 .confirm-modal-cancel-button {
@@ -32305,8 +32305,8 @@ li::after {
 }
 
 .file-upload-area {
-  border: 1px dashed #D32729;
-  background: #D3272933;
+  border: 1px dashed #EC2F2E;
+  background: #EC2F2E33;
   padding: 40px 70px;
   display: flex;
   flex-direction: column;
@@ -32318,7 +32318,7 @@ li::after {
 }
 
 .file-upload-area span {
-  color: #D32729;
+  color: #EC2F2E;
   text-align: center;
 }
 
