--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -11,7 +11,9 @@ body {
   color: black;
   overflow-x: hidden !important;
 }
-
+#vendor-info-table-body td {
+  padding: 10px
+}
 p {
   line-height: 26px;
 }
