"Update label styles: changed font-weight from 600 to 700, and color from #666 to black"

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -24417,9 +24417,9 @@ section.leve-comments {
 label {
   font-size: 11px;
   line-height: 24px;
-  font-weight: 600;
+  font-weight: 700;
   margin-bottom: 5px;
-  color: #666 !important;
+  color: black !important;
 }
 
 form label.error {
